plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
	id 'net.neoforged.moddev' version '1.0.1'
}

def secrets = new Properties()
def secretsFile = file('secrets.properties')
if (secretsFile.exists()) {
	secretsFile.withInputStream {
		stream -> secrets.load(stream)
	}

	fileTree("secrets").matching {
		include "**/*.properties"
	}.each {
		File file ->
			file.withInputStream {
				stream -> secrets.load(stream)
			}
	}
}

idea {
	// Tell IDEA to always download sources/javadoc artifacts from maven.
	module {
		downloadJavadoc = true
		downloadSources = true
	}
}

version = mod_version
group = 'org.angrypixel'
base {
	archivesName = modid
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation,-this-escape"// << "-Werror"

neoForge {
	version = project.neoforge_version
	validateAccessTransformers = true

	runs {
		configureEach {
			gameDirectory = project.file('run')
			systemProperty 'forge.logging.console.level', 'debug'
			logLevel = org.slf4j.event.Level.DEBUG
		}

		client {
			client()
			systemProperty 'forge.enabledGameTestNamespaces', modid
			programArguments.addAll '--username', secrets.getProperty("username") ?: 'Dev', secrets.getProperty("uuid") ? '--uuid' : '', secrets.getProperty("uuid") ?: ''
		}

		server {
			server()
			systemProperty 'forge.enabledGameTestNamespaces', modid
			programArgument '--nogui'
		}

		data {
			data()
			programArguments.addAll '--mod', modid, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
		}
	}

	mods {
		thebetweenlands {
			sourceSet this.sourceSets.main
		}
	}
}

sourceSets.main.resources { srcDir 'src/generated/resources' exclude '.cache' }

repositories {
	mavenLocal()
	mavenCentral()
	maven {
		name "Jared's Maven" // JEI
		url 'https://maven.blamejared.com/'
	}
	maven {
		name = "TerraformersMC" //EMI
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		name = "Flemmli97" //Flan
		url = "https://gitlab.com/api/v4/projects/21830712/packages/maven"
	}
	maven {
		name 'Curseforge Maven'
		url "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
}

dependencies {
	implementation "mezz.jei:jei-${project.minecraft_version}-neoforge:${project.jei_version}"
	compileOnly "dev.emi:emi-neoforge:${project.emi_version}+${project.minecraft_version}"
    compileOnly "io.github.flemmli97:flan:${project.minecraft_version}-${project.flan_version}-neoforge:api"

	implementation "curse.maven:jade-324717:5706149"
	runtimeOnly "curse.maven:atlasviewer-633577:5490697"
	runtimeOnly "curse.maven:debug-utils-forge-783008:5607923"
	runtimeOnly "curse.maven:worldedit-225608:5830452"

	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

	compileOnly 'com.google.auto.service:auto-service:1.1.0'
	annotationProcessor 'com.google.auto.service:auto-service:1.1.0'

	implementation 'org.codehaus.groovy:groovy-json:3.0.9'
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : modid,
                "Specification-Vendor"    : "angrypixel",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "angrypixel",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
				"ModSide": "BOTH" // Just in case it's still supported
        ])
    }
}


task serverJar(type: Jar, dependsOn: jar) {
	group = 'build'
	description = "Creates server jar files"
	archiveClassifier = 'server'

	from(zipTree(jar.archiveFile)) {
		exclude "assets/thebetweenlands/sounds/**"
		exclude "assets/thebetweenlands/models/**"
		exclude "assets/thebetweenlands/particles/**"
		exclude "assets/thebetweenlands/textures/**"
		exclude "assets/thebetweenlands/shaders/**"
	}

	manifest {
		attributes jar.manifest.getAttributes()

		attributes ([
			"ModSide": "SERVER"
		])
	}
}

import org.apache.tools.ant.filters.TokenFilter;
import groovy.json.JsonSlurper;
import groovy.json.JsonOutput;

tasks.named('processResources', ProcessResources).configure {
	// I think this is technically better than the doLast {} method because this slurps the files as they're being copied,
	//     instead of waiting for them to be copied first and then editing them all afterwards
	def jsonSlurper = new JsonSlurper()
	def fileTokenizer = new TokenFilter.FileTokenizer()
    filesMatching(["**/*.json", "**/*.mcmeta"], { file ->
    	filter (TokenFilter, addFileTokenizer: fileTokenizer, add: {fileText -> JsonOutput.toJson(jsonSlurper.parseText(fileText))})
    })
}

assemble.dependsOn(serverJar)

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
